--- a/index.html
+++ b/index.html
@@ -405,7 +405,6 @@
               <img src="public/images/icons/next.svg" alt="" />
             </div>
           </div>
-
           <div class="pagination_box">
             <div class="pagination_main">
               <img src="public/images/icons/arrow-prev_next.svg" alt="" />
@@ -434,6 +433,10 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="adv_frame">
+        Members get free shipping* with no order minimum!*Restrictions apply.Try
+        free 30-day trial
       </div>
 
       <!--        Selling product frame finished-->
