--- a/index.html
+++ b/index.html
@@ -405,6 +405,11 @@
               <img src="public/images/icons/next.svg" alt="" />
             </div>
           </div>
+
+          <!--        Selling product frame finished-->
+
+          <!--        Pagination started-->
+
           <div class="pagination_box">
             <div class="pagination_main">
               <img src="public/images/icons/arrow-prev_next.svg" alt="" />
@@ -439,9 +444,66 @@
         free 30-day trial
       </div>
 
-      <!--        Selling product frame finished-->
+      <!--        Pagination finished-->
 
-      <!--        Advertising publish qilamiz-->
+      <!--        Home Page Spec Product Frame Started-->
+
+      <div class="spec_product_frame">
+        <div class="container">
+          <div class="category_top">
+            <span>Headphones</span>
+            <a href="">View All</a>
+          </div>
+          <div class="spec_product_wrapper">
+            <div class="big_product_box">
+              <div class="big_product_content">
+                <span>Now in moon gray</span>
+                <p>Beats Studio Buds</p>
+                <a href="">Shop Now</a>
+                <div class="hover_border"></div>
+              </div>
+              <img src="public/images/products/headphone_big.png" alt="" />
+            </div>
+            <div class="small_product_wrapper">
+              <div class="small_product_box">
+                <div class="small_product_content">
+                  <strong>Over-Ear</strong>
+                  <span>29 items</span>
+                </div>
+                <img src="public/images/products/sony_headphone.png" alt="" />
+              </div>
+              <div class="small_product_box">
+                <div class="small_product_content">
+                  <strong>On Ear</strong>
+                  <span>29 items</span>
+                </div>
+                <img src="public/images/products/on-ear.png" alt="" />
+              </div>
+              <div class="small_product_box">
+                <div class="small_product_content">
+                  <strong>Sports & Fitnes</strong>
+                  <span>29 items</span>
+                </div>
+                <img
+                  src="public/images/products/fitness_headphone.png"
+                  alt=""
+                />
+              </div>
+              <div class="small_product_box">
+                <div class="small_product_content">
+                  <strong>Bluetooth Headphones</strong>
+                  <span>29 items</span>
+                </div>
+                <img
+                  src="public/images/products/bluetooth_headphones.png"
+                  alt=""
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--        Home Page Spec Product Frame Finished     -->
     </div>
   </body>
 </html>
