--- a/index.html
+++ b/index.html
@@ -503,7 +503,213 @@
           </div>
         </div>
       </div>
+
       <!--        Home Page Spec Product Frame Finished     -->
+
+      <!--        TV publishing started -->
+
+      <div class="tv_frame">
+        <div class="container">
+          <div class="category_top">
+            <span>TV & Home Theatre</span>
+            <div>
+              <a href="">Televisions</a>
+              <a href="">Digital Cable</a>
+              <a href="">Media Streamers</a>
+              <a href="">Remote Controls</a>
+            </div>
+          </div>
+          <div class="tv_wrapper">
+            <div class="next_prev_box">
+              <img src="public/images/icons/next.svg" alt="" />
+            </div>
+            <div class="tv_product_boxes">
+              <div class="tv_product_box">
+                <div class="product_img">
+                  <a href="">
+                    <img src="public/images/products/samsung_tv.png" alt="" />
+                  </a>
+                </div>
+                <div class="product_content_box">
+                  <span class="product_title">Samsung</span>
+                  <a href="">
+                    <p class="product_desc">
+                      Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with
+                    </p>
+                  </a>
+
+                  <div class="review_box">
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+
+                    <span>3.014 reviews</span>
+                  </div>
+
+                  <div class="price_box">
+                    <strong>$32.50</strong>
+                    <span>$45</span>
+                  </div>
+                </div>
+              </div>
+              <div class="tv_product_box">
+                <div class="product_img">
+                  <a href="">
+                    <img src="public/images/products/samsung_tv.png" alt="" />
+                  </a>
+                </div>
+                <div class="product_content_box">
+                  <span class="product_title">Samsung</span>
+                  <a href="">
+                    <p class="product_desc">
+                      Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with
+                    </p>
+                  </a>
+
+                  <div class="review_box">
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+
+                    <span>3.014 reviews</span>
+                  </div>
+
+                  <div class="price_box">
+                    <strong>$32.50</strong>
+                    <span>$45</span>
+                  </div>
+                </div>
+              </div>
+              <div class="tv_product_box">
+                <div class="product_img">
+                  <a href="">
+                    <img src="public/images/products/samsung_tv.png" alt="" />
+                  </a>
+                </div>
+                <div class="product_content_box">
+                  <span class="product_title">Samsung</span>
+                  <a href="">
+                    <p class="product_desc">
+                      Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with
+                    </p>
+                  </a>
+
+                  <div class="review_box">
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+
+                    <span>3.014 reviews</span>
+                  </div>
+
+                  <div class="price_box">
+                    <strong>$32.50</strong>
+                    <span>$45</span>
+                  </div>
+                </div>
+              </div>
+              <div class="tv_product_box">
+                <div class="product_img">
+                  <a href="">
+                    <img src="public/images/products/samsung_tv.png" alt="" />
+                  </a>
+                </div>
+                <div class="product_content_box">
+                  <span class="product_title">Samsung</span>
+                  <a href="">
+                    <p class="product_desc">
+                      Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with
+                    </p>
+                  </a>
+
+                  <div class="review_box">
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+
+                    <span>3.014 reviews</span>
+                  </div>
+
+                  <div class="price_box">
+                    <strong>$32.50</strong>
+                    <span>$45</span>
+                  </div>
+                </div>
+              </div>
+              <div class="tv_product_box">
+                <div class="product_img">
+                  <a href="">
+                    <img src="public/images/products/samsung_tv.png" alt="" />
+                  </a>
+                </div>
+                <div class="product_content_box">
+                  <span class="product_title">Samsung</span>
+                  <a href="">
+                    <p class="product_desc">
+                      Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with
+                    </p>
+                  </a>
+
+                  <div class="review_box">
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+
+                    <span>3.014 reviews</span>
+                  </div>
+
+                  <div class="price_box">
+                    <strong>$32.50</strong>
+                    <span>$45</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="next_prev_box" style="transform: scaleX(-1)">
+              <img src="public/images/icons/next.svg" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="pagination_box">
+        <div class="pagination_main">
+          <img src="public/images/icons/arrow-prev_next.svg" alt="" />
+          <div class="pagination_dot">
+            <div class="dot">
+              <div></div>
+            </div>
+            <div class="dot active">
+              <div></div>
+            </div>
+            <div class="dot">
+              <div></div>
+            </div>
+            <div class="dot">
+              <div></div>
+            </div>
+            <div class="dot">
+              <div></div>
+            </div>
+          </div>
+          <img
+            src="public/images/icons/arrow-prev_next.svg"
+            alt=""
+            style="transform: scaleX(-1)"
+          />
+        </div>
+      </div>
+    </div>
+  </div>
     </div>
   </body>
 </html>
