fix: tv publishing finished

--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
                   <span class="product_title">Samsung</span>
                   <a href="">
                     <p class="product_desc">
-                      Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with
+                      Samsung 58 4K UHD HDR LED Tizen Smart TV
                     </p>
                   </a>
 
@@ -557,14 +557,14 @@
               <div class="tv_product_box">
                 <div class="product_img">
                   <a href="">
-                    <img src="public/images/products/samsung_tv.png" alt="" />
+                    <img src="public/images/products/tcl.png" alt="" />
                   </a>
                 </div>
                 <div class="product_content_box">
-                  <span class="product_title">Samsung</span>
+                  <span class="product_title">TCL</span>
                   <a href="">
                     <p class="product_desc">
-                      Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with
+                      TCL 3-Series 40" 1080p HD LED Android Smart TV...
                     </p>
                   </a>
 
@@ -587,14 +587,44 @@
               <div class="tv_product_box">
                 <div class="product_img">
                   <a href="">
-                    <img src="public/images/products/samsung_tv.png" alt="" />
+                    <img src="public/images/products/LG-UHD.png" alt="">
                   </a>
                 </div>
                 <div class="product_content_box">
-                  <span class="product_title">Samsung</span>
+                  <span class="product_title">LG</span>
                   <a href="">
                     <p class="product_desc">
-                      Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with
+                      LG 65" 4K UHD HDR LED webOS Smart TV
+                    </p>
+                  </a>
+
+                  <div class="review_box">
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+
+                    <span>3.014 reviews</span>
+                  </div>
+
+                  <div class="price_box">
+                    <strong>$399.00</strong>
+                    <span>$45</span>
+                  </div>
+                </div>
+              </div>
+              <div class="tv_product_box">
+                <div class="product_img">
+                  <a href="">
+                    <img src="public/images/products/LG-OLED.png" alt="" />
+                  </a>
+                </div>
+                <div class="product_content_box">
+                  <span class="product_title">LG</span>
+                  <a href="">
+                    <p class="product_desc">
+                      LG 55" 4K UHD HDR OLED webOS Smart TV
                     </p>
                   </a>
 
@@ -617,14 +647,14 @@
               <div class="tv_product_box">
                 <div class="product_img">
                   <a href="">
-                    <img src="public/images/products/samsung_tv.png" alt="" />
+                    <img src="public/images/products/SONY-TV.png" alt="" />
                   </a>
                 </div>
                 <div class="product_content_box">
-                  <span class="product_title">Samsung</span>
+                  <span class="product_title">SONY</span>
                   <a href="">
                     <p class="product_desc">
-                      Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with
+                      Sony X85J 65" 4K UHD HDR LED Smart Google TV...
                     </p>
                   </a>
 
@@ -639,37 +669,7 @@
                   </div>
 
                   <div class="price_box">
-                    <strong>$32.50</strong>
-                    <span>$45</span>
-                  </div>
-                </div>
-              </div>
-              <div class="tv_product_box">
-                <div class="product_img">
-                  <a href="">
-                    <img src="public/images/products/samsung_tv.png" alt="" />
-                  </a>
-                </div>
-                <div class="product_content_box">
-                  <span class="product_title">Samsung</span>
-                  <a href="">
-                    <p class="product_desc">
-                      Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with
-                    </p>
-                  </a>
-
-                  <div class="review_box">
-                    <img src="public/images/icons/review.svg" alt="" />
-                    <img src="public/images/icons/review.svg" alt="" />
-                    <img src="public/images/icons/review.svg" alt="" />
-                    <img src="public/images/icons/review.svg" alt="" />
-                    <img src="public/images/icons/review.svg" alt="" />
-
-                    <span>3.014 reviews</span>
-                  </div>
-
-                  <div class="price_box">
-                    <strong>$32.50</strong>
+                    <strong>$18.124</strong>
                     <span>$45</span>
                   </div>
                 </div>
